2011-03-04  John Bauman  <jbauman@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] premultipliedAlpha WebGL context attribute is ignored.
        https://bugs.webkit.org/show_bug.cgi?id=55411

        Add test case for (non-)premultiplied-alpha compositing.

        * compositing/webgl/webgl-nonpremultiplied-blend.html: Added.
        * platform/chromium-gpu/compositing/webgl/webgl-nonpremultiplied-blend-expected.checksum: Added.
        * platform/chromium-gpu/compositing/webgl/webgl-nonpremultiplied-blend-expected.png: Added.
        * platform/chromium-gpu/compositing/webgl/webgl-nonpremultiplied-blend-expected.txt: Added.
        * platform/mac-wk2/Skipped:
        * platform/mac/Skipped:
2011-03-04  John Bauman  <jbauman@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] premultipliedAlpha WebGL context attribute is ignored.
        https://bugs.webkit.org/show_bug.cgi?id=55411

        Update compositor to set the blending of each layer correctly.

        Test: compositing/webgl/webgl-nonpremultiplied-blend.html

        * platform/graphics/chromium/CanvasLayerChromium.cpp:
        (WebCore::CanvasLayerChromium::CanvasLayerChromium):
        (WebCore::CanvasLayerChromium::draw):
        * platform/graphics/chromium/CanvasLayerChromium.h:
        * platform/graphics/chromium/ContentLayerChromium.cpp:
        (WebCore::ContentLayerChromium::draw):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawLayers):
        * platform/graphics/chromium/WebGLLayerChromium.cpp:
        (WebCore::WebGLLayerChromium::setContext):

Canonical link: https://commits.webkit.org/70298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80404 268f45cc-cd09-0410-ab3c-d52691b4dbfc